# competition_doc_generation

./: .gitignore  README.md  generate_xlsx.py  get_docx_data.py  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
src/: config.py  generate_xlsx.py  get_docx_data.py  merge_docx_to_pdf.py
src/converter/: docx_to_pdf.py
src/utils/: fonts.py  format_checker.py  get_docx_data.py  pdf_extras.py  watermark.py
template/: template.docx
