[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "competition_doc_generation"
version = "0.1.0"
authors = [ { name = "niooh", email = "3244414236@qq.com" } ]
description = "Automated Generation of Competition Question Documents"
long_description = { file: "README.md" }
long_description_content_type = "text/markdown"
requires-python = ">=3.10"  # 需支持直接的 Type Hints
license = { file = "LICENSE" }

dependencies = [
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "python-docx>=1.1.0"
]

[project.optional-dependencies]
dev = []
