[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "competition_doc_generation"
version = "0.1.0"
authors = [ { name = "niooh", email = "3244414236@qq.com" } ]
description = "Automated Generation of Competition Question Documents"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"  # 需支持 Type Hints
license = { file = "LICENSE" }

dependencies = [
  "openpyxl>=3.1.0",
  "pandas>=2.0.0",
  "python-docx>=1.1.0",
  "pywin32>=306",
  "pypdf>=6.10.0",
  "reportlab>=4.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.50",
]

[project.scripts]
check = "src.utils.format_checker:main"
xlsx = "src.generate_xlsx:main"
merge = "src.merge_docx_to_pdf:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

